@@ -1,5 +1,7 @@
 package dbdr.domain.careworker.service;
 
+import dbdr.domain.careworker.dto.request.CareworkerUpdateRequestDTO;
+import dbdr.domain.careworker.dto.response.CareworkerMyPageResponseDTO;
 import dbdr.domain.careworker.entity.Careworker;
 import dbdr.domain.careworker.dto.request.CareworkerRequestDTO;
 import dbdr.domain.careworker.dto.response.CareworkerResponseDTO;
@@ -15,7 +17,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -27,9 +29,22 @@ public class CareworkerService {
 
     @Transactional(readOnly = true)
     public List<CareworkerResponseDTO> getCareworkersByInstitution(Long institutionId) {
-        return careworkerRepository.findByInstitutionId(institutionId).stream()
-                .map(this::toResponseDTO)
-                .collect(Collectors.toList());
+        List<Careworker> results = careworkerRepository.findAllByInstitutionId(institutionId);
+        return results.stream().map(this::toResponseDTO).toList();
+    }
+
+    @Transactional(readOnly = true)
+    public CareworkerResponseDTO getCareworkerByInstitution(Long careworkerId, Long institutionId) {
+        institutionService.getInstitutionById(institutionId);
+
+        Careworker careworker = careworkerRepository.findById(careworkerId)
+                .orElseThrow(() -> new ApplicationException(ApplicationError.CAREWORKER_NOT_FOUND));
+
+        if (!careworker.getInstitution().getId().equals(institutionId)) {
+            throw new ApplicationException(ApplicationError.ACCESS_NOT_ALLOWED);
+        }
+
+        return toResponseDTO(careworker);
     }
 
     @Transactional(readOnly = true)
@@ -44,6 +59,14 @@ public class CareworkerService {
         Careworker careworker = findCareworkerById(careworkerId);
         return toResponseDTO(careworker);
     }
+
+    @Transactional(readOnly = true)
+    public List<CareworkerResponseDTO> getAllCareworkers() {
+        List<Careworker> careworkers = careworkerRepository.findAll();
+        return careworkers.stream().map(this::toResponseDTO).toList();
+    }
+
+
 
     @Transactional
     public CareworkerResponseDTO createCareworker(CareworkerRequestDTO careworkerRequestDTO, Long institutionId) {
@@ -73,6 +96,24 @@ public class CareworkerService {
     }
 
     @Transactional
+    public CareworkerResponseDTO updateCareworkerByAdmin(Long careworkerId, CareworkerRequestDTO careworkerDTO) {
+        Careworker careworker = findCareworkerById(careworkerId);
+
+
+        Institution institution = institutionService.getInstitutionById(careworkerDTO.getInstitutionId());
+        if (institution == null) {
+            throw new ApplicationException(ApplicationError.INSTITUTION_NOT_FOUND);
+        }
+
+        careworker.updateInstitution(institution);
+        careworker.updateCareworker(careworkerDTO);
+
+        return toResponseDTO(careworker);
+    }
+
+
+
+    @Transactional
     public void deleteCareworker(Long careworkerId, Long institutionId) {
         Careworker careworker = findCareworkerById(careworkerId);
 
@@ -83,6 +124,31 @@ public class CareworkerService {
         careworker.deactivate();
         careworkerRepository.delete(careworker);
     }
+
+    @Transactional
+    public void deleteCareworkerByAdmin(Long careworkerId) {
+        Careworker careworker = findCareworkerById(careworkerId);
+        careworker.deactivate();
+        careworkerRepository.delete(careworker);
+    }
+
+    @Transactional(readOnly = true)
+    public CareworkerMyPageResponseDTO getMyPageInfo(Long careworkerId) {
+        Careworker careworker = findCareworkerById(careworkerId);
+        return toMyPageResponseDTO(careworker);
+    }
+
+    @Transactional
+    public CareworkerMyPageResponseDTO updateWorkingDaysAndAlertTime(Long careworkerId, CareworkerUpdateRequestDTO request) {
+        Careworker careworker = careworkerRepository.findById(careworkerId)
+                .orElseThrow(() -> new ApplicationException(ApplicationError.CAREWORKER_NOT_FOUND));
+
+        careworker.updateWorkingDays(request.getWorkingDays());
+        careworker.updateAlertTime(request.getAlertTime());
+
+        return toMyPageResponseDTO(careworker);
+    }
+
 
     private Careworker findCareworkerById(Long careworkerId) {
         return careworkerRepository.findById(careworkerId)
@@ -119,5 +185,16 @@ public class CareworkerService {
         Careworker careworker = findByPhone(phoneNumber);
         careworker.updateLineUserId(userId);
         careworkerRepository.save(careworker);
+    }
+
+    private CareworkerMyPageResponseDTO toMyPageResponseDTO(Careworker careworker) {
+        return new CareworkerMyPageResponseDTO(
+                careworker.getName(),
+                careworker.getPhone(),
+                careworker.getInstitution().getInstitutionName(),
+                careworker.getLoginId(),
+                careworker.getWorkingDays(),
+                careworker.getAlertTime()
+        );
     }
 }
